--- a/src/css/main.css
+++ b/src/css/main.css
@@ -15,18 +15,53 @@ canvas[resize] {
   height: 100%;
 }
 
-div#top_container {
-  width: 100%;
-  z-index: 2;
+div#top_container, div#left_container {
   position: fixed;
+  z-index: 1000;
   top: 0;
   left: 0;
+  transition-property: all;
+	transition-duration: .5s;
+	transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+}
+
+div#top_container {
+  width: 100%;
 }
 
 div#top_container div#top_menu {
   width: 50%;
   margin-left: 25%;
   background-color: #3366ff
+}
+
+div#left_container {
+  height: 100%;
+  width: 150px;
+}
+
+div#left_container.hide {
+  left: -151px;
+}
+
+div#left_container div#event_log {
+  width: 100%;
+  height: 100%;
+  border-right: 1px solid #ccc;
+  overflow-y: scroll;
+}
+
+div#left_container button#left_hide {
+  width: 20px;
+  height: 20px;
+  bottom: 10px;
+  right: -30px;
+  border: 1px solid #ccc;
+  position: absolute;
+  color: #ccc;
+  padding: 1px 9px 2px 5px;
+  z-index: 10000;
+  background-color: #fff;
 }
 
 div#event_overlay {
